mostly result chapter cleanup

--- a/expe.tex
+++ b/expe.tex
@@ -193,7 +193,7 @@ If the slab is made of a monocrystal or a ceramic, it is usually extremely britt
 \paragraph{Fabrication of sieves and fishnet metamaterial layers}%{{{
 Compared to the dielectrics, femtosecond machining of metallic sheets into meshes is relatively easy and was implemented in our laboratory. Machining of free-standing wire media was not succesfull and no such sample was finished, as the resulting thin wires were bent out of their original plane and their spacing was uneven.
 
-The meshes had two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to possibly have negative index of refraction (see Sect. \ref{sect_fishnet}). 
+The meshes had two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to possibly have negative index of refraction (see Sect. \ref{section_fishnet}). 
 The femtosecond laser used was different from that serving as the femtosecond source for terahertz spectroscopy (Sect. \ref{sect_tdts}). More than sufficient power was provided by the \textit{Spectra Physics Spitfire Ace} multipass titanium-sapphire amplifier, with 1 mJ in ca. 50 fs impulses, at 5 kHz repetition rate; its output beam had to be attenuated to obtain finer cut at the expense of slightly slower speed. The mechanical part consisted of two crossed \textit{Owis} stepper-motor controlled linear stages, and a fast mechanical shutter allowed to control the beam with a sufficient resolution of ca. 100 ms. 
 \begin{figure}[ht] \caption{\textbf{(a)} Laser micromachining of the steel sheet with a moving four-sample holder, metal vapour ventilation, and the focusing lens. Bright plasma spot is visible at the focus. \textbf{(b)} The resulting sieves made from 30 $\mu$m stainless sheet with 10 mm patterned diameter.} \label{fg_microfab} \centering 
 \textbf{(a)}\includegraphics[height=5cm]{img/technology/sieve2_drilling_m.pdf}
