outline for Bragg mirror

--- a/result.tex
+++ b/result.tex
@@ -6,7 +6,26 @@
 
 \label{section_result}
 \section{Dielectric slab} \label{section_Dielectric slab}
-The structure composed of alternating dielectric layers, effectively a one-dimensional photonic crystal, has been investigated thoroughly in the previous decades. We review it mostly for comparison with the structures presented in the following. 
+The structure composed of alternating dielectric layers, effectively a one-dimensional photonic crystal, is the simplest periodic structure to be started with. It has been investigated thoroughly in the previous century and found major application as the dielectric mirror. 
+
+Thanks to its continuous translational symmetry in the transverse direction, it exhibits only a subset of all different phenomena that can be observed in most periodic structures. The key difference is that no \textit{individual resonances} can occur. This does not imply that the energy would have to be distributed evenly in the structure, but that energy is stored and transported solely by propagating, non-evanescent waves.
+
+% for comparison with the structures presented in the following. 
+
+% TODO discuss the PWEM results, illustrate folding
+
+
+% TODO N x half-wave in unit cell --> bragg gap,   N x half-wave in either of the layers  -->   
+%		e.g. one example is when the layers have the same  (optical thickness, $n d$), the Bragg band-gap width is zero
+% TODO scan of spectra for unit cell filling fraction
+
+% TODO 
+% TODO 
+% TODO 
+
+
+% XXX XXX XXX XXX XXX 
+
 
 \begin{figure}[ht] \caption{Dispersion curves for a one-dimensional photonic crystal, computed using PWEM. The side plots show the shape of the fields in the $(y,z)$ plane, at the frequencies of the band edges. Note that each field plot spans two unit cells. The electric field $E_x$ is plot as color map. \textbf{a)} In free space, \textbf{b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% thickness (outlined by black lines)} \label{fg_1dbd} \centering 
 \textbf{a)}	\includegraphics[width=8cm]{img/Slab_eps001_PWEM.pdf}
@@ -36,6 +55,8 @@ Such a shifting between waves at the lower and upper boundaries of the band gap 
                %\caption{3bu.pdf}   \includegraphics[width=3cm]{img/multilay_3bu.pdf}
                %\caption{3grey.pdf} \includegraphics[width=3cm]{img/multilay_3grey.pdf}
                %\caption{4vio.pdf}  \includegraphics[width=3cm]{img/multilay_4vio.pdf} \end{figure} \clearpage
+
+% TODO note the ripples inside the band-gap (for more cells)
 
 % TODO Finite planar structure with defect mode {skoromets2013}
 
