--- a/title.tex
+++ b/title.tex
@@ -95,7 +95,12 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \thispagestyle{empty} \newpage
 % --------------------------------------------------------------------------------
 \chapter*{Acknowledgements}
-\todo{+}
+%% Preparation of this thesis was not prepared without difficulties. However, it appears that overcoming such difficulties is necessary to gain some sort of valuable knowledge and experience that can not be conveyed through textbooks.
+%%
+%%
+%%
+%%
+%%
 
 The numerical results presented could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. Harmonic inversion was used based on the FDM algorithm \cite{mandelshtam1997harmonic}.
 
